--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,10 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files": [
+            "app/Helpers/LocaleRoute.php"
+        ]
     },
     "scripts": {
         "post-autoload-dump": [
